added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -108,7 +108,9 @@
     "\n",
     "#### In words, the acceleration of a particle at any instant is the second derivative of its position x(t) with respect to time.\n",
     "\n",
-    "#### A common unit of acceleration is the meter per second per second: m/(s · s) or m/s2. You will see other units in the problems, but they will each be in the form of length/(time · time) or length/time2. Acceleration has both magnitude and direction (it is yet another vector quantity). Its algebraic sign represents its direction on an axis just as for displacement and velocity; that is, acceleration with a positive value is in the positive direction of an axis, and acceleration with a negative value is in the negative direction."
+    "#### A common unit of acceleration is the meter per second per second: m/(s · s) or m/s2. You will see other units in the problems, but they will each be in the form of length/(time · time) or length/time2. Acceleration has both magnitude and direction (it is yet another vector quantity). Its algebraic sign represents its direction on an axis just as for displacement and velocity; that is, acceleration with a positive value is in the positive direction of an axis, and acceleration with a negative value is in the negative direction.\n",
+    "\n",
+    "#### In words, the acceleration of a particle at any instant is the second derivative of its position x(t) with respect to time."
    ]
   },
   {
