added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,12 +110,44 @@
     "\n",
     "#### A common unit of acceleration is the meter per second per second: m/(s · s) or m/s2. You will see other units in the problems, but they will each be in the form of length/(time · time) or length/time2. Acceleration has both magnitude and direction (it is yet another vector quantity). Its algebraic sign represents its direction on an axis just as for displacement and velocity; that is, acceleration with a positive value is in the positive direction of an axis, and acceleration with a negative value is in the negative direction.\n",
     "\n",
-    "#### In words, the acceleration of a particle at any instant is the second derivative of its position x(t) with respect to time."
+    "#### In words, the acceleration of a particle at any instant is the second derivative of its position x(t) with respect to time.\n",
+    "\n",
+    "#### If the signs of the velocity and acceleration of a particle are the same, the speed of the particle increases. If the signs are opposite, the speed decreases."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Velocity is 3*x**2 - 27\n",
+      " The Acceleration is: 6*x\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x = sp.symbols(\"x\")\n",
+    "\n",
+    "f = -27*x + x**3\n",
+    "\n",
+    "f_vel = f.diff(x) # -27 + 3x^2\n",
+    "\n",
+    "f_acc = f_vel.diff(x) # 6x\n",
+    "\n",
+    "print(f\"The Velocity is {f_vel}\\n The Acceleration is: {f_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
