added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
     "\n",
     "x = sp.symbols(\"x\")\n",
     "\n",
-    "f = -27*x + x**3\n",
+    "f = 4 -27*x + x**3\n",
     "\n",
     "f_vel = f.diff(x) # -27 + 3x^2\n",
     "\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +154,65 @@
        "[-3, 3]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sp.solve(f_vel, x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 4$"
+      ],
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.subs(x, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.solve(f_acc, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (c) Describe the particle’s motion for t ≥ 0.\n",
+    "\n",
+    "#### At t = 0, the particle is at x(0) = +4 m and is moving with a velocity of ν(0) =−27 m/s—that is, in the negative direction of the x axis. Its acceleration is a(0) = 0 because just then the particle’s velocity is not changing."
    ]
   },
   {
