added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -239,10 +239,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Kinematic Equation Explanation\n",
+    "\n",
+    "The equation:\n",
+    "\n",
+    "\\[ v^2 = v_0^2 + 2a(x - x_0) \\]\n",
+    "\n",
+    "is one of the fundamental kinematic equations used in physics to describe the motion of an object under constant acceleration. Here's what each symbol represents:\n",
+    "\n",
+    "- \\( v \\): Final velocity of the object.\n",
+    "- \\( v_0 \\): Initial velocity of the object.\n",
+    "- \\( a \\): Constant acceleration.\n",
+    "- \\( x \\): Final position of the object.\n",
+    "- \\( x_0 \\): Initial position of the object.\n",
+    "\n",
+    "**Purpose:**\n",
+    "This equation relates the velocity of an object to its displacement when it is subjected to constant acceleration. It allows you to find the final velocity of an object if you know its initial velocity, the acceleration, and the disp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kinematic Equation for Displacement with Uniform Acceleration\n",
+    "\n",
+    "The equation:\n",
+    "\n",
+    "\\[ x - x_0 = \\frac{1}{2}(v_0 + v)t \\]\n",
+    "\n",
+    "is used to calculate the displacement of an object moving with uniform acceleration. Here's what each term represents:\n",
+    "\n",
+    "- \\( x \\): Final position of the object.\n",
+    "- \\( x_0 \\): Initial position of the object.\n",
+    "- \\( v_0 \\): Initial velocity of the object.\n",
+    "- \\( v \\): Final velocity of the object.\n",
+    "- \\( t \\): Time over which the motion occurs.\n",
+    "\n",
+    "**Purpose:**\n",
+    "This equation is derived from the definition of average velocity when acceleration is constant. It states that the displacement (\\( x - x_0 \\)) is equal to the average of the initial and final velocities (\\( \\frac{v_0 + v}{2} \\)), multiplied by the time elapsed (\\( t \\)).\n",
+    "\n",
+    "**Use Case:**\n",
+    "Useful for situations where you need to find the displacement based on initial and final velocities over a known time period, typical in physics problems involving uniformly accelerated motion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
