added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -288,6 +288,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Kinematic Equation for Displacement with Initial Velocity and Acceleration\n",
+    "\n",
+    "The equation:\n",
+    "\n",
+    "\\[ x - x_0 = vt - \\frac{1}{2}at^2 \\]\n",
+    "\n",
+    "is crucial for describing the motion of an object under uniform acceleration when it starts with a non-zero initial velocity. Here's the meaning of each term:\n",
+    "\n",
+    "- \\( x \\): Final position of the object.\n",
+    "- \\( x_0 \\): Initial position of the object.\n",
+    "- \\( v \\): Initial velocity of the object.\n",
+    "- \\( a \\): Constant acceleration.\n",
+    "- \\( t \\): Time over which the motion occurs.\n",
+    "\n",
+    "**Purpose:**\n",
+    "This equation calculates the displacement (\\( x - x_0 \\)) of the object after a time \\( t \\), starting from an initial velocity \\( v \\) and under a constant acceleration \\( a \\). The term \\(-\\frac{1}{2}at^2\\) represents the adjustment in displacement due to the acceleration effect over time.\n",
+    "\n",
+    "**Use Case:**\n",
+    "This formula is especially useful in scenarios where an object moves from a specific point with an initial speed and experiences acceleration or deceleration, such as a car starting to move and then speeding up or slowing down uniformly.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
