added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -313,7 +313,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Conversion Formula from km/h to m/s\n",
+    "\n",
+    "To convert a speed from kilometers per hour (km/h) to meters per second (m/s), use the following conversion factor:\n",
+    "\n",
+    "\\[ 1 \\, \\text{km/h} = \\frac{1000 \\, \\text{meters}}{3600 \\, \\text{seconds}} \\]\n",
+    "\n",
+    "This simplifies to approximately:\n",
+    "\n",
+    "\\[ 1 \\, \\text{km/h} \\approx 0.27778 \\, \\text{m/s} \\]\n",
+    "\n",
+    "**Example Conversion:**\n",
+    "- To convert 100 km/h to m/s:\n",
+    "  \\[ 100 \\, \\text{km/h} = 100 \\times 0.27778 \\, \\text{m/s} = 27.78 \\, \\text{m/s} \\]\n"
+   ]
   }
  ],
  "metadata": {
