added new methods

--- a/Guide/Interview.ipynb
+++ b/Guide/Interview.ipynb
@@ -19,6 +19,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## What are embedding layers, and why are they important in LLMs?\n",
+    "\n",
+    "#### Embedding layers are a significant component in LLMs used to convert categorical data, such as words, into dense vector representations. These embeddings capture semantic relationships between words by representing them in a continuous vector space where similar words exhibit stronger proximity. The importance of embedding layers in LLMs includes:\n",
+    "\n",
+    "- Dimensionality reduction: They reduce the dimensionality of the input data, making it more manageable for the model to process.\n",
+    "- Semantic understanding: Embeddings capture nuanced semantic meanings and relationships between words, enhancing the model's ability to understand and generate human-like text.\n",
+    "- Transfer learning: Pre-trained embeddings can be used across different models and tasks, providing a solid foundation of language understanding that can be fine-tuned for specific applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How do you measure the performance of an LLM?\n",
+    "\n",
+    "#### Researchers and practitioners have developed numerous evaluation metrics to gauge the performance of an LLM. Common metrics include:\n",
+    "\n",
+    "- Perplexity: Measures how well the model predicts a sample, commonly used in language modeling tasks.\n",
+    "- Accuracy: Used for tasks like text classification to measure the proportion of correct predictions.\n",
+    "- F1 Score: A harmonic mean of precision and recall, used for tasks like named entity recognition.\n",
+    "- BLEU (Bilingual Evaluation Understudy) score: Measures the quality of machine-generated text against reference translations, commonly used in machine translation.\n",
+    "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation): A set of metrics that evaluate the overlap between generated text and reference text, often used in summarization tasks. They help quantify the model's effectiveness and guide further improvements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
