added new methods

--- a/Guide/Interview.ipynb
+++ b/Guide/Interview.ipynb
@@ -47,6 +47,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## What are some techniques for controlling the output of an LLM?\n",
+    "\n",
+    "#### Several techniques can be used to control the output of an LLM, including:\n",
+    "\n",
+    "- Temperature: Adjusting this parameter during sampling controls the randomness of the output. Lower temperatures produce more deterministic outputs, while higher values return more varied results.\n",
+    "- Top-K sampling: Limits the sampling pool to the top K most probable tokens, reducing the likelihood of generating less relevant or nonsensical text.\n",
+    "- Top-P (nucleus) sampling: Chooses tokens from the smallest set whose cumulative probability exceeds a threshold P, balancing diversity and coherence.\n",
+    "- Prompt engineering: Crafting specific prompts to guide the model towards generating desired outputs by providing context or examples.\n",
+    "- Control tokens: Using special tokens to signal the model to generate text in a specific style, format, or content type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
