added new methods

--- a/Guide/LLMS.ipynb
+++ b/Guide/LLMS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interview Guide"
+    "# LLMS GUIDE"
    ]
   },
   {
@@ -62,7 +62,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### What are some approaches to reduce the computational cost of LLMs?\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
