added new methods

--- a/Guide/LLMS.ipynb
+++ b/Guide/LLMS.ipynb
@@ -64,7 +64,36 @@
    "metadata": {},
    "source": [
     "#### What are some approaches to reduce the computational cost of LLMs?\n",
-    "\n"
+    "\n",
+    "#### To reduce the computational cost of LLMs, we can employ:\n",
+    "\n",
+    "- Model pruning: Removing less important weights or neurons from the model to reduce its size and computational requirements.\n",
+    "- Quantization: Converting the model weights from higher precision (e.g., 32-bit floating-point) to lower precision (e.g., 8-bit integer) reduces memory usage and speeds up inference.\n",
+    "- Distillation: Training a smaller model (student) to mimic the behavior of a larger, pre-trained model (teacher) to achieve similar performance with fewer resources.\n",
+    "- Sparse attention: Using techniques like sparse transformers to limit the attention mechanism to a subset of tokens, reduces computational load.\n",
+    "- Efficient architectures: Developing and using efficient model architectures specifically designed to minimize computational demands while maintaining performance, such as the Reformer or Longformer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explain the concept of \"few-shot learning\" in LLMs and its advantages.\n",
+    "\n",
+    "#### Few-shot learning in LLMs refers to the model's ability to learn and perform new tasks using only a few examples. This capability leverages the LLM's extensive pre-trained knowledge, enabling it to generalize from a small number of instances. \n",
+    "\n",
+    "#### The primary advantages of few-shot learning include reduced data requirements, as the need for large task-specific datasets is minimized, increased flexibility, allowing the model to adapt to various tasks with minimal fine-tuning, and cost efficiency, as lower data requirements and reduced training times translate to significant cost savings in data collection and computational resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How can you incorporate external knowledge into an LLM?\n",
+    "\n",
+    "- Retrieval-Augmented Generation (RAG): Combines retrieval methods with generative models to fetch relevant information from external sources during text generation.\n",
+    "- Fine-tuning with domain-specific data: Training the model on additional datasets that contain the required knowledge to specialize it for specific tasks or domains.\n",
+    "- Prompt engineering: Designing prompts that guide the model to utilize external knowledge effectively during inference."
    ]
   }
  ],
