added new methods

--- a/Guide/LLMS.ipynb
+++ b/Guide/LLMS.ipynb
@@ -95,6 +95,33 @@
     "- Fine-tuning with domain-specific data: Training the model on additional datasets that contain the required knowledge to specialize it for specific tasks or domains.\n",
     "- Prompt engineering: Designing prompts that guide the model to utilize external knowledge effectively during inference."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is prompt engineering, and why is it crucial for working with LLMs?\n",
+    "\n",
+    "#### Prompt engineering involves designing and refining prompts to guide LLMs in generating accurate and relevant outputs. It’s vital for working with LLMs because the quality of the prompt directly impacts the model's performance. \n",
+    "\n",
+    "#### Effective prompts can enhance the model's ability to understand the task, generate accurate and relevant responses, and reduce the likelihood of errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Can you provide examples of different prompting techniques (zero-shot, few-shot, chain-of-thought) and explain when to use them?\n",
+    "\n",
+    "- Zero-shot prompting: Provides the model with a task description without any examples. Typically used when there are no available examples or when we want to test the model's general understanding and flexibility.\n",
+    "- Few-shot prompting: Supplies a few examples along with the task description to guide the model. This is useful when the model needs context or examples to better understand the task.\n",
+    "- Chain-of-Thought prompting: Breaks down a complex task into smaller, sequential steps the model can follow. This can be beneficial for tasks that require logical reasoning and multi-step problem-solving."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
