added new methods

--- a/Guide/Behavioral.ipynb
+++ b/Guide/Behavioral.ipynb
@@ -24,7 +24,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Provide an example of a goal you reached and tell me how you achieved it.\n",
+    "\n",
+    "#### "
+   ]
   }
  ],
  "metadata": {
