added new methods

--- a/Guide/Behavioral.ipynb
+++ b/Guide/Behavioral.ipynb
@@ -25,6 +25,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Here are some key aspects of XGBoost:\n",
+    "\n",
+    "#### Gradient Boosting Framework:\n",
+    "- It works by sequentially adding simple models to correct the errors made by previous models.\n",
+    "#### Efficiency and Scalability:\n",
+    "- It is optimized to be highly computationally efficient and can handle large datasets.\n",
+    "#### Handling missing Data:\n",
+    "- XGBoost has an in-built routine to handle missing data. (More on this later)\n",
+    "#### Tree pruning:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Provide an example of a goal you reached and tell me how you achieved it.\n",
     "\n",
     "#### "
