--- a/Guide/Behavioral.ipynb
+++ b/Guide/Behavioral.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## Provide an example of a goal you reached and tell me how you achieved it.\n",
     "\n",
-    "#### "
+    "#### Business goal of reducing the costs of mis predicting outages and how devices could be broken. "
    ]
   }
  ],
