added new models

--- a/LLMS/lang_chain.ipynb
+++ b/LLMS/lang_chain.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "dotenv_path = (\"/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/.env\")\n",
     "load_dotenv(dotenv_path)\n",
     "\n",
-    "openai.api_key = os.environ['OPENAI_API_KEY']"
+    "OPEN_API_KEY = os.environ['OPENAI_API_KEY']"
    ]
   },
   {
