added new models

--- a/Guide/Ensemble.ipynb
+++ b/Guide/Ensemble.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Bagging\n",
     "\n",
-    "#### Bagging is also known as bootstrap aggregation.  This technique is similar to random forest, but it uses all the predictors, whereas random forest uses only a subset of predictors in each tree.  \n",
+    "#### Boosting is an ensemble modeling technique designed to create a strong classifier by combining multiple weak classifiers. The process involves building models sequentially, where each new model aims to correct the errors made by the previous ones.\n",
     "\n",
     "#### In bagging, a random sample of data from the training set is selected with replacement, which enables the duplication of sample instances in a set. Below are the main steps involved in bagging: \n",
     "\n",
