added new models

--- a/Guide/Ensemble.ipynb
+++ b/Guide/Ensemble.ipynb
@@ -31,7 +31,7 @@
     "- Combining the predictions by taking the average of the predictions or taking the majority vote (for classification).\n",
     "\n",
     "## Boosting\n",
-    "#### Boosting adopts a sequential approach, where the prediction of the current model is transferred to the next one. Each model iteratively focuses attention on the observations that are misclassified by its predecessors. We’ve outlined the general process below: \n",
+    "#### Boosting is an ensemble modeling technique designed to create a strong classifier by combining multiple weak classifiers. The process involves building models sequentially, where each new model aims to correct the errors made by the previous ones. \n",
     "\n",
     "- Similarly to bagging, boosting is easy to understand and implement. Furthermore, it does not require any preprocessing and can handle missing values in the data.\n",
     "- It efficiently reduces bias. \n",
