added new models

--- a/Guide/Ensemble.ipynb
+++ b/Guide/Ensemble.ipynb
@@ -42,6 +42,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Difference Between Bagging And Boosting\n",
+    "\n",
+    "#### Bagging involves training multiple models in parallel on different subsets of the data and then averaging their predictions to reduce variance. Boosting, however, trains models sequentially to correct the predecessor’s errors, primarily reducing bias. I would choose bagging for stability and boosting for performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Random Forest\n",
     "\n",
     "#### Random Forest is a commonly used model that can solve both classification and regression problems. A random forest is made up of many decision trees that are trained using bagging. Its outcome is determined by taking the average of the prediction of individual trees. \n",
@@ -50,6 +59,20 @@
     "\n",
     "#### Feature bagging, also known as feature randomness, creates a random sample of features to ensure low correlation among decision trees. This approach sets apart random forests from decision trees which consider all the possible feature splits, whereas random forests consider only a subset of those features. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Boosting\n",
+    "\n",
+    "#### Gradient boosting is an ensemble technique that builds models sequentially, each correcting errors made by previous models. Models are added until no further improvements can be made. It’s particularly useful in scenarios of high variance and bias, such as predicting customer churn. I would use it in systems where predictive accuracy is crucial and computational resources are adequate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
