added new models

--- a/Guide/Ensemble.ipynb
+++ b/Guide/Ensemble.ipynb
@@ -72,6 +72,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## How does XGBoost Differ from Random Forests?\n",
+    "\n",
+    "- XGBoost: Utilizes a boosting approach that iteratively builds trees to address the shortcomings of preceding ones.\n",
+    "\n",
+    "- Random Forests: Operates on a bagging strategy that constructs trees independently, and the ensemble averages their predictions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
