added new models

--- a/LLMS/Chat-GPT-Lang-Chain/Integration.ipynb
+++ b/LLMS/Chat-GPT-Lang-Chain/Integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,17 @@
     "import openai\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from langchain_huggingface import ChatHuggingFace"
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
