added new models

--- a/LLMS/Chat-GPT-Lang-Chain/Integration.ipynb
+++ b/LLMS/Chat-GPT-Lang-Chain/Integration.ipynb
@@ -1,29 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "from langchain.llms import OpenAI\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Lang-Chain-Env",
