added new examples

--- a/Transformer-Books/Prompt-Engineering-Gen-AI/Principles-Prompting.ipynb
+++ b/Transformer-Books/Prompt-Engineering-Gen-AI/Principles-Prompting.ipynb
@@ -105,7 +105,102 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Evaluate Quality\n",
+    "#### As of yet, there has been no feedback loop to judge the quality of your responses, other than the basic trial and error of running the prompt and seeing the results, referred to as blind prompting. This is fine when your prompts are used temporarily for a single task and rarely revisited. However, when you’re reusing the same prompt multiple times or building a production application that relies on a prompt, you need to be more rigorous with measuring results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### More rigorous evaluation techniques are necessary when writing scientific papers or grading a new foundation model release, but often you will only need to go just one step above basic trial and error. You may find that a simple thumbs-up/thumbs-down rating system implemented in a Jupyter Notebook can be enough to add some rigor to prompt optimization, without adding too much overhead. One common test is to see whether providing examples is worth the additional cost in terms of prompt length, or whether you can get away with providing no examples in the prompt. The first step is getting responses for multiple runs of each prompt and storing them in a spreadsheet, which we will do after setting up our environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define two variants of the prompt to test zero-shot\n",
+    "# vs few-shot\n",
+    "prompt_A = \"\"\"Product description: A pair of shoes that can\n",
+    "fit any foot size.\n",
+    "Seed words: adaptable, fit, omni-fit.\n",
+    "Product names:\"\"\"\n",
+    "\n",
+    "prompt_B = \"\"\"Product description: A home milkshake maker.\n",
+    "Seed words: fast, healthy, compact.\n",
+    "Product names: HomeShaker, Fit Shaker, QuickShake, Shake\n",
+    "Maker\n",
+    "\n",
+    "Product description: A watch that can tell accurate time in\n",
+    "space.\n",
+    "Seed words: astronaut, space-hardened, eliptical orbit\n",
+    "Product names: AstroTime, SpaceGuard, Orbit-Accurate,\n",
+    "EliptoTime.\n",
+    "\n",
+    "Product description: A pair of shoes that can fit any foot\n",
+    "size.\n",
+    "Seed words: adaptable, fit, omni-fit.\n",
+    "Product names:\"\"\"\n",
+    "\n",
+    "test_prompts = [prompt_A, prompt_B]\n",
+    "\n",
+    "import pandas as pd\n",
+    "from openai import OpenAI\n",
+    "import os\n",
+    "\n",
+    "# Set your OpenAI key as an environment variable\n",
+    "# https://platform.openai.com/api-keys\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # Default\n",
+    ")\n",
+    "\n",
+    "def get_response(prompt):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        messages=[\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are a helpful assistant.\"\n",
+    "            },\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": prompt\n",
+    "            }\n",
+    "        ]\n",
+    "    )\n",
+    "    return response.choices[0].message.content\n",
+    "\n",
+    "# Iterate through the prompts and get responses\n",
+    "responses = []\n",
+    "num_tests = 5\n",
+    "\n",
+    "for idx, prompt in enumerate(test_prompts):\n",
+    "    # prompt number as a letter\n",
+    "    var_name = chr(ord('A') + idx)\n",
+    "\n",
+    "    for i in range(num_tests):\n",
+    "        # Get a response from the model\n",
+    "        response = get_response(prompt)\n",
+    "\n",
+    "        data = {\n",
+    "            \"variant\": var_name,\n",
+    "            \"prompt\": prompt,\n",
+    "            \"response\": response\n",
+    "            }\n",
+    "        responses.append(data)\n",
+    "\n",
+    "# Convert responses into a dataframe\n",
+    "df = pd.DataFrame(responses)\n",
+    "\n",
+    "# Save the dataframe as a CSV file\n",
+    "df.to_csv(\"responses.csv\", index=False)\n",
+    "\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
